feat: 优化附件库管理与预览
